# servomotor-mcp

./: LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: publish.yml
examples/: claude_desktop_config.json  demo_prompts.md
hardware_tests/: README.md  RESULTS.txt  demo_live.py  discover_motor.py  hw_test_advanced.py  hw_test_basic.py  hw_test_endurance.py  hw_test_extended.py  hw_test_sequence.py  hw_test_serialbus.py
mcpb/: PACKAGING.md  manifest.json
src/servomotor_mcp/: __init__.py  motors.py  safety.py  sequencer.py  server.py
tests/: test_mock_bus.py  test_safety.py  test_sequencer.py
